# s16-11-n-python-react

./: .gitignore  README.md
.github/: dependabot.yml
backend/: pyproject.toml
backend/app/: courses_list.csv  main.py
backend/app/alembic/: README  env.py
backend/app/alembic/versions/: 08e6ae73aeb0_add_thumbnail.py  0e459babfd2f_add_opcional_user_id.py  12dbcd89fbc9_fixing_incongruents_in_models_course_.py  21128f53a67e_fixing_courses_my_courses_id_nullable.py  3296886451ed_added_user_relationship_and_my_courses.py  39c23f0a77e4_refactoring_image_thumbnail_to_model_.py  3c33f5574038_add_tables_channel_course_video.py  4954aca05289_drop_tables.py  5f3f00080a55_country_optional.py  6b985b9b746c_delete_thumbnail_course.py  6f17b58dc5e0_add_models_course_channel_and_video.py  7094f8fd5569_change_name_first_name.py  8046375e46f1_drop_tables_course_channel_video.py  849484c16b71_add_tables_course_channel_and_video.py  ab491686ec62_add_thumbnail_in_course.py  ae338e9c2adc_drop_tables.py  aef466c5b0e9_add_model_user.py  (+5 more)
backend/app/api/: main.py
backend/app/chatbot/: chatBotCache.py
backend/app/core/: config.py  database.py
backend/app/crud/: abstract.py  channel.py  comment.py  course.py  myCourses.py  rating.py  user.py  video.py
backend/app/models/: channel.py  comment.py  course.py  models.py  myCourses.py  rating.py  user.py  video.py
backend/app/schemas/: channel.py  chatBot.py  course.py  myCourse.py  user.py  video.py  videoCourse.py
backend/app/utils/: oauth2.py  password.py  user.py
backend/load_data/: load.py  prueba-Channel-info.xlsx  prueba.csv
(+98 files in other folders)
