[tool.poetry]
name = "s16-11-n-python-react"
version = "0.1.0"
description = ""
authors = ["Nahuel <nahuel.94.arrieta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
psycopg = {extras = ["binary"], version = "^3.2.1"}
python-dotenv = "^1.0.1"
alembic = "^1.13.2"
argon2-cffi = "^23.1.0"
pyjwt = "^2.8.0"
openpyxl = "^3.1.5"
google-generativeai = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
